# pagelet

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  deny.toml  rust-toolchain.toml
.githooks/: pre-push
.github/workflows/: benchmark.yml  ci.yml  conformance.yml  fuzz-smoke.yml  release.yml
crates/pagelet/: Cargo.toml  README.md
crates/pagelet/benches/: fixture_generation.rs
crates/pagelet/src/: cli.rs  core.rs  document.rs  engine.rs  epub.rs  ffi.rs  layout.rs  lib.rs  main.rs  testkit.rs  text.rs  wire.rs
crates/pagelet/tests/: smoke.rs  wire.rs
docs/: architecture.md  cache-format.md  compatibility.md  ffi-contract.md  performance.md  release-policy.md  security-model.md
docs/adr/: 0000-template.md  0001-independent-repository-and-engine-boundary.md  0002-bookir-and-layoutir-separation.md  0003-fixed-point-layout-units.md  0004-host-measured-text-backend.md  0005-break-token-pagination.md  0006-opaque-handles-and-versioned-wire.md  0007-cache-versioning-and-invalidation.md  0008-vmprint-reference-and-clean-room-layout-design.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: css_cascade.rs  css_parse.rs  footnote_resolver.rs  image_header.rs  layout_typed_ir.rs  ocf_decode.rs  ocf_paths.rs  smoke.rs  xhtml_differential.rs  xhtml_fast.rs
perf/: performance-budgets.toml
perf/baselines/: macos-aarch64-m2pro.csv
schemas/pageletScene/: v1.md  v2.md
scripts/: validate-before-push.sh
tests/: corpus-manifest.toml
tests/golden/: minimal-epub3.golden.json
tests/spec/: dart-compatibility.toml  requirements.toml  support-matrix.toml
tools/pagelet-integration-tests/: Cargo.toml
tools/pagelet-integration-tests/src/: lib.rs
tools/pagelet-testkit/: Cargo.toml
tools/pagelet-testkit/src/: fixtures.rs  generators.rs  golden.rs  lib.rs  random.rs  text.rs
tools/xtask/: Cargo.toml
tools/xtask/src/: benchmark.rs  external.rs  main.rs
