[workspace]
members = [
    "crates/pagelet",
    "tools/pagelet-integration-tests",
    "tools/pagelet-testkit",
    "tools/xtask",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
