[package]
name = "pagelet-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
pagelet = { path = "../crates/pagelet" }

[[bin]]
name = "smoke"
path = "fuzz_targets/smoke.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ocf_decode"
path = "fuzz_targets/ocf_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ocf_paths"
path = "fuzz_targets/ocf_paths.rs"
test = false
doc = false
bench = false

[[bin]]
name = "xhtml_fast"
path = "fuzz_targets/xhtml_fast.rs"
test = false
doc = false
bench = false

[[bin]]
name = "xhtml_differential"
path = "fuzz_targets/xhtml_differential.rs"
test = false
doc = false
bench = false

[[bin]]
name = "css_parse"
path = "fuzz_targets/css_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "css_cascade"
path = "fuzz_targets/css_cascade.rs"
test = false
doc = false
bench = false

[[bin]]
name = "footnote_resolver"
path = "fuzz_targets/footnote_resolver.rs"
test = false
doc = false
bench = false

[[bin]]
name = "image_header"
path = "fuzz_targets/image_header.rs"
test = false
doc = false
bench = false
