[package]
name = "pagelet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Deterministic EPUB parsing and pagination engine."
readme = "README.md"
documentation = "https://docs.rs/pagelet"
keywords = ["epub", "pagination", "layout", "reader"]
categories = ["parser-implementations", "rendering", "text-processing"]

[features]
default = []
native-shaping = []

[[bench]]
name = "fixture_generation"
harness = false

[lints]
workspace = true
