[package]
name = "pagelet-integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Private integration-test crate for pagelet."

[dependencies]
pagelet = { path = "../../crates/pagelet", version = "0.1.0" }
pagelet-testkit = { path = "../pagelet-testkit", version = "0.1.0" }

[lints]
workspace = true
