[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Private pagelet development automation."

[dependencies]
pagelet-testkit = { path = "../pagelet-testkit", version = "0.1.0" }

[lints]
workspace = true
