[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Private pagelet development automation."

[dependencies]
pagelet = { path = "../../crates/pagelet", version = "0.1.0" }
pagelet-testkit = { path = "../pagelet-testkit", version = "0.1.0" }
sha2 = "0.10.9"

[lints]
workspace = true
